Fix overlapping image on text issue

--- a/assets/css/blog.scss
+++ b/assets/css/blog.scss
@@ -53,6 +53,7 @@
       .post-preview-img {
         margin-top: 2rem;
         margin-bottom: 1.5rem;
+        display: block;
         @include align-center;
       }
 
